--- a/style.css
+++ b/style.css
@@ -58,7 +58,7 @@ body {
 
 .input-form {
 	position: relative;
-	max-width: 150px;
+	justify-content: center;
 }
 
 .filters {
@@ -82,22 +82,42 @@ body {
 .foods {
 	margin-top: 2em;
 	height: 100vh;
+	max-width: 1250px;
 }
 
 /* foods */
 .recipe_card {
 	max-width: 300px;
+	position: relative;
+	height: 300px;
 }
 
 .recipe_image {
+	object-fit: cover;
 	max-width: 300px;
+	height: 300px;
 	border-radius: 10px;
 }
 
 .recipe_title {
 	background-color: white;
-	padding: 0.5em;
 	bottom: 0;
 	right: 0%;
 	font-size: 14px;
+	height: 3em;
+	position: absolute;
+}
+
+.recipe_container {
+	justify-content: space-between;
+	display: flex;
+	flex-wrap: wrap;
+}
+
+.recipe_score {
+	position: absolute;
+	top: 0;
+	background-color: #903bb9;
+	padding: 0.5em;
+	color: white;
 }
