--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 	color: #e87525;
 }
 
-.start-btn {
+.start-btn,
+.generate-btn {
 	background-color: #903bb9;
 	color: #fff;
 }
@@ -85,39 +86,9 @@ body {
 	max-width: 1250px;
 }
 
-/* foods */
-.recipe_card {
-	max-width: 300px;
-	position: relative;
-	height: 300px;
-}
-
-.recipe_image {
+.recipe_img {
 	object-fit: cover;
-	max-width: 300px;
+	max-width: 500px;
 	height: 300px;
 	border-radius: 10px;
-}
-
-.recipe_title {
-	background-color: white;
-	bottom: 0;
-	right: 0%;
-	font-size: 14px;
-	height: 3em;
-	position: absolute;
-}
-
-.recipe_container {
-	justify-content: space-between;
-	display: flex;
-	flex-wrap: wrap;
-}
-
-.recipe_score {
-	position: absolute;
-	top: 0;
-	background-color: #903bb9;
-	padding: 0.5em;
-	color: white;
 }
